force-app/main/default/objects/Account/fields/Credit_Report_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Scorecard__c</fullName>
    <label>Credit Report Scorecard</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>