force-app/main/default/objects/Account/fields/LLC_BI__Account_Review__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_Review__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This is a field hidden to users, but its data is generated and used for the interim financial doc request.</description>
    <label>Account Review</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>