force-app/main/default/objects/Account/fields/LLC_BI__ActionFlag__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ActionFlag__c</fullName>
    <description>This field is optional. The variable text facilitates trigger actions. For example, &quot;createinterim&quot; triggers the creation of an interim statement and inserts it into @AL DM.</description>
    <label>ActionFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>