force-app/main/default/objects/Account/fields/LLC_BI__Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Active__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify if a Relationship or Account is active. Select Yes or No from a picklist.</description>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>