force-app/main/default/objects/Account/fields/LLC_BI__AP_Stress_Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__AP_Stress_Index__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is the Associated Press Index for the Relationship or Account&apos;s county. Value for the Stress Index is entered by a user. It is specific to a per county basis (not generated).</description>
    <label>AP Stress Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>