force-app/main/default/objects/Account/fields/LLC_BI__Average_Ledger_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Average_Ledger_Balance__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the average amount (Currency) of the ledger balance for the Relationship/Account.</description>
    <label>Average Ledger Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>