force-app/main/default/objects/Account/fields/LLC_BI__Average_Unavailable__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Average_Unavailable__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is also known as Average Float.</description>
    <label>Average Unavailable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>