force-app/main/default/objects/Account/fields/LLC_BI__Backup_Withholding_Exempt_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Backup_Withholding_Exempt_Code__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. The code representing the party&apos;s reason for claiming exemption from backup withholding. The numeric codes are defined by the instructions contained within IRS Form W-9.</description>
    <inlineHelpText>The code representing the party&apos;s reason for claiming exemption from backup withholding. The numeric codes are defined by the instructions contained within IRS Form W-9.</inlineHelpText>
    <label>Backup Withholding Exempt Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IRA or qualifying 501(a) or 403(b)(7) account</fullName>
            </value>
            <value>
                <fullName>U.S. agency or instrumentality</fullName>
            </value>
            <value>
                <fullName>U.S. State, District, possession</fullName>
            </value>
            <value>
                <fullName>Foreign government, agency or instrumentality</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>U.S. registered securities or commodities dealer</fullName>
            </value>
            <value>
                <fullName>CFTC-registered futures commission merchant</fullName>
            </value>
            <value>
                <fullName>Real Estate Investment Trust</fullName>
            </value>
            <value>
                <fullName>Fegistered under Investment Company Act</fullName>
            </value>
            <value>
                <fullName>Bank-operated 584(a) trust fund</fullName>
            </value>
            <value>
                <fullName>Financial institution</fullName>
            </value>
            <value>
                <fullName>Investment community nominee</fullName>
            </value>
            <value>
                <fullName>Section 664 trust</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>