force-app/main/default/objects/Account/fields/LLC_BI__Backup_Withholding_Exempt_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Backup_Withholding_Exempt_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. If true, the account holder has certified that they are exempt from backup withholding.</description>
    <inlineHelpText>If true the account holder has certified that he/she/it is exempt from backup withholding.</inlineHelpText>
    <label>Backup Withholding Exempt Indicator</label>
    <type>Checkbox</type>
</CustomField>