force-app/main/default/objects/Account/fields/LLC_BI__Backup_Withholding_N_A_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Backup_Withholding_N_A_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. If true, the holder whose tax identification number (TIN) was used for backup withholding purposes is certifying that they are not subject to backup withholding.</description>
    <inlineHelpText>If true the holder whose tax identification number (TIN) was used for backup withholding purposes is certifying that he/she/it is not subject to backup withholding.</inlineHelpText>
    <label>Backup Withholding N/A Indicator</label>
    <type>Checkbox</type>
</CustomField>