force-app/main/default/objects/Account/fields/LLC_BI__Billing_Address_County__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Billing_Address_County__c</fullName>
    <description>Users populate this optional text field with the county name for the billing address.</description>
    <label>Billing Address County</label>
    <length>40</length>
    <type>Text</type>
</CustomField>