force-app/main/default/objects/Account/fields/LLC_BI__Bot_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Bot_Date__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. The date field is used to specify when the BOT should wake up.</description>
    <inlineHelpText>The field the BOT uses to pull when it&apos;s supposed to wake up</inlineHelpText>
    <label>Bot Date</label>
    <type>Date</type>
</CustomField>