force-app/main/default/objects/Account/fields/LLC_BI__Bot_RMI__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Bot_RMI__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is used for the BOT webservice calls and is incremented there. Workflow is in place for the remainder of the function.</description>
    <label>Bot RMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>