force-app/main/default/objects/Account/fields/LLC_BI__Business_Tax_Return_EPC__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Business_Tax_Return_EPC__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of most recent Eligible Passive Company (EPC) Tax Return. EPC is also known as real estate holding company. It is not needed if there is no EPC involvement.</description>
    <label>Business Tax Return (EPC)</label>
    <type>Date</type>
</CustomField>