force-app/main/default/objects/Account/fields/LLC_BI__Business_Tax_Return_OC__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Business_Tax_Return_OC__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of most recent Operating Company (OC) Business Tax Return.</description>
    <label>Business Tax Return (OC)</label>
    <type>Date</type>
</CustomField>