force-app/main/default/objects/Account/fields/LLC_BI__CIF__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CIF__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the CIF number for the relationship.</description>
    <label>Customer Relationship Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>