force-app/main/default/objects/Account/fields/LLC_BI__Connection_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Connection_Identifier__c</fullName>
    <description>This field is optional. It is populated automatically. This field is a text field and is used as an external ID. This specifies any connection that exists between accounts.</description>
    <externalId>true</externalId>
    <label>Connection Identifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>