force-app/main/default/objects/Account/fields/LLC_BI__Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Credit_Rating__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This text field is used to specify the Credit Rating of the Relationship.</description>
    <label>Credit Rating</label>
    <length>15</length>
    <type>Text</type>
</CustomField>