force-app/main/default/objects/Account/fields/LLC_BI__Credit_Stats__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Credit_Stats__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This text field is used to specify the overall Credit Statistics for the Relationship/Account.</description>
    <label>Credit Stats</label>
    <length>30</length>
    <type>Text</type>
</CustomField>