force-app/main/default/objects/Account/fields/LLC_BI__Debt_Service__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debt_Service__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration and calculated via trigger. It details the total monthly debt service from loans this institution has made to this Relationship or Account.</description>
    <label>Debt Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>