force-app/main/default/objects/Account/fields/LLC_BI__Debt_Service_Coverage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Debt_Service_Coverage__c</fullName>
    <description>The debt service coverage ratio of the account.</description>
    <label>Debt Service Coverage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>