force-app/main/default/objects/Account/fields/LLC_BI__Default_App__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Default_App__c</fullName>
    <defaultValue>&apos;relationship.relationship-loan-products&apos;</defaultValue>
    <description>This field is optional. The value is set by an administrator. This field determines the default page within the nCino User Interface for this record.</description>
    <inlineHelpText>This field determines the default page within the nCino User Interface for this record.</inlineHelpText>
    <label>Default App</label>
    <length>255</length>
    <type>Text</type>
</CustomField>