force-app/main/default/objects/Account/fields/LLC_BI__Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Doing_Business_As__c</fullName>
    <description>This field is not required. This field is manually populated. This field is used to store a Sole Proprietor&apos;s business name if it is different than the customer&apos;s name.</description>
    <label>Doing Business As</label>
    <type>TextArea</type>
</CustomField>