force-app/main/default/objects/Account/fields/LLC_BI__DONOTPACKAGE_GeoField__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DONOTPACKAGE_GeoField__c</fullName>
    <description>--DEPRECATED-- This field is optional.  Geolocation field required for a test case. For testing only.</description>
    <inlineHelpText>--DEPRECATED-- Geolocation field required for a test case. For testing only.</inlineHelpText>
    <label>-D TESTING ONLY - Test GeoField</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>