force-app/main/default/objects/Account/fields/LLC_BI__DSC_Pre_OC__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DSC_Pre_OC__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to demonstrate the business&apos; ability to pay its monthly debt service, before Officer Compensation is paid. Calculated automatically. DSC (pre OC) = (NOI)/Debt Service.</description>
    <label>DSC (Pre OC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>