force-app/main/default/objects/Account/fields/LLC_BI__Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Duns_Number__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. The DUNS number is utilized in lieu of the Data.com field.</description>
    <inlineHelpText>DUNS number utilized in lieu of Data.com field</inlineHelpText>
    <label>D-U-N-S Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>