force-app/main/default/objects/Account/fields/LLC_BI__Employee_Relationship__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Employee_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is manually populated by a user. When the value of the field is set to true, the sharing setting of this Relationship is affected to restrict read/write access. This field is used as an indicator if the relationship is an employee. If selected, the relationship is that of an employee of the financial institution.</description>
    <inlineHelpText>This box should be checked if the Relationship is an Employee of your Financial Institution</inlineHelpText>
    <label>Employee Relationship</label>
    <type>Checkbox</type>
</CustomField>