force-app/main/default/objects/Account/fields/LLC_BI__EngagesInInternetGambling__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__EngagesInInternetGambling__c</fullName>
    <description>This field is optional and indicates whether a business engages in Internet gambling. This field&apos;s information can be collected during the New Customer Onboarding &amp; Deposit Application.</description>
    <label>Engages in Internet Gambling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>