force-app/main/default/objects/Account/fields/LLC_BI__Facility__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Facility__c</fullName>
    <description>This field is optional. It is chosen from a picklist by a user or a data integration. This field is used to show if the facility is owned or leased.</description>
    <label>Facility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>