force-app/main/default/objects/Account/fields/LLC_BI__FICO_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__FICO_Credit_Report__c</fullName>
    <description>This field is optional. It is populated automatically by the Credit Services integration. This field contains the ID of the credit report that was used to populate the other FICO fields.</description>
    <inlineHelpText>This field contains the ID of the credit report that was used to populate the other FICO fields.</inlineHelpText>
    <label>FICO Credit Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>