force-app/main/default/objects/Account/fields/LLC_BI__FICO_Score__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__FICO_Score__c</fullName>
    <description>This field is optional. It is populated automatically by the Credit Services integration. This field is used to specify the most recent FICO score.</description>
    <label>FICO Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>