force-app/main/default/objects/Account/fields/LLC_BI__FICO_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__FICO_Source__c</fullName>
    <description>This field is optional. It is populated automatically by the Credit Services integration. This field indicates the source of the credit score information.</description>
    <inlineHelpText>This field indicated the source of the credit score information.</inlineHelpText>
    <label>FICO Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>