force-app/main/default/objects/Account/fields/LLC_BI__Filed_Trust__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Filed_Trust__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Filed Trust</description>
    <inlineHelpText>This indicates whether the financial institution possesses a valid and up-to-date trust agreement for this trust account.</inlineHelpText>
    <label>Filed Trust</label>
    <type>Checkbox</type>
</CustomField>