force-app/main/default/objects/Account/fields/LLC_BI__Financials_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Financials_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. This field is used as an indicator and reflects whether financials should not be automatically requested from Relationship or Account. If the checkbox is selected, do not request financials.</description>
    <label>Financials Opt Out</label>
    <type>Checkbox</type>
</CustomField>