force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Affiliated_NFFE__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Affiliated_NFFE__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is the name of the publicly-traded NFFE corporation with which the beneficial owner is related by affiliation.</description>
    <inlineHelpText>The name of the publicly-traded NFFE corporation with which the beneficial owner is related by affiliation.</inlineHelpText>
    <label>Form W8 Affiliated NFFE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>