force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Bankruptcy_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Bankruptcy_Date__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is the date the beneficial owner (non-financial entity) filed for liquidation or bankruptcy, as certified by IRS forms W-8.</description>
    <inlineHelpText>The date the beneficial owner (non-financial entity) filed for liquidation or bankruptcy, as certified by IRS forms W-8.</inlineHelpText>
    <label>Form W8 Bankruptcy Date</label>
    <type>Date</type>
</CustomField>