force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Disregarded_Entity_FFI_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Disregarded_Entity_FFI_Type__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. If the account holder is a disregarded entity or branch of a disregarded entity that is a Foreign Financial Institution (FFI), enter the type of FFI (for purposes of IRS Forms W-8, e.g., form W-8BEN-E).</description>
    <inlineHelpText>If the account holder is a disregarded entity or branch of a disregarded entity that is a Foreign Financial Institution (FFI), enter the type of FFI (for purposes of IRS Forms W-8, e.g., form W-8BEN-E).</inlineHelpText>
    <label>Form W8 Disregarded Entity FFI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nonparticipating FFI</fullName>
            </value>
            <value>
                <fullName>Participating FFI</fullName>
            </value>
            <value>
                <fullName>Reporting Model 1 FFI</fullName>
            </value>
            <value>
                <fullName>Reporting Model 2 FFI</fullName>
            </value>
            <value>
                <fullName>U.S. Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>