force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_FFI_Documentation_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_FFI_Documentation_Type__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It indicates the type of documentation that the Owner-Documented Foreign Financial Institution (FFI) will provide (either an independent law firm&apos;s audit letter, or other alternative reporting statements), as prescribed by IRS forms W-8.</description>
    <inlineHelpText>Indicates type of documentation that the Owner-Documented Foreign Financial Institution (FFI) will provide (either an independent law firm&apos;s audit letter, or other alternative reporting statements), as prescribed by IRS forms W-8.</inlineHelpText>
    <label>Form W8 FFI Documentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reporting Statement on Individual Primaries</fullName>
            </value>
            <value>
                <fullName>Auditor&apos;s Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>