force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_IGA_Country__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_IGA_Country__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is the country with which the US has an intergovernmental agreement (IGA), under which the beneficial owner qualifies as a nonreporting foreign financial institution (FFI).</description>
    <inlineHelpText>The country with which the US has an intergovernmental agreement (IGA), under which the beneficial owner qualifies as a nonreporting foreign financial institution (FFI).</inlineHelpText>
    <label>Form W8 IGA Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>